--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.15.4",
     "jsonfile": "^4.0.0",
+    "lodash": "^4.17.4",
     "path": "^0.12.7"
   }
 }
